Update GitHub Actions workflow to include changes in the workflow file itself

--- a/.github/workflows/gcc-qemu.yml
+++ b/.github/workflows/gcc-qemu.yml
@@ -5,10 +5,12 @@ on:
     branches: ["main"]
     paths:
       - "gcc-qemu/**"
+      - ".github/workflows/gcc-qemu.yml"
   pull_request:
     branches: ["main"]
     paths:
       - "gcc-qemu/**"
+      - ".github/workflows/gcc-qemu.yml"
 
 env:
   REGISTRY: ghcr.io
