--- a/.github/workflows/gcc-qemu.yml
+++ b/.github/workflows/gcc-qemu.yml
@@ -49,10 +49,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get build time tag
-        id: buildtime
-        run: echo "build_time_tag=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
-
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
@@ -61,6 +57,6 @@ jobs:
         with:
           context: "{{defaultContext}}:gcc-qemu"
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.buildtime.outputs.build_time_tag }}
+          tags: ${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
