--- a/.github/workflows/gcc-qemu.yml
+++ b/.github/workflows/gcc-qemu.yml
@@ -57,6 +57,6 @@ jobs:
         with:
           context: "{{defaultContext}}:gcc-qemu"
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
